--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 requests = "^2.23.0"
+freezegun = "^0.3.15"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.761"
